[gd_scene load_steps=11 format=3 uid="uid://mmlwoat6jwgn"]

[ext_resource type="Script" path="res://Scenes/Doors/simple_door.gd" id="1_eomb3"]
[ext_resource type="Texture2D" uid="uid://cqckj87cjwbf2" path="res://Assets/Textures/Doors/doorbig0.png" id="1_j8gis"]
[ext_resource type="AudioStream" uid="uid://qsqqpe7jr3o3" path="res://Assets/Sounds/SFX/DOROPN.WAV" id="3_3cjke"]

[sub_resource type="Animation" id="Animation_5si70"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-3, 0, -4)]
}

[sub_resource type="Animation" id="Animation_4qfd3"]
resource_name = "close"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-3, 2, -4), Vector3(-3, 0, -4)]
}

[sub_resource type="Animation" id="Animation_r1tl3"]
resource_name = "open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-3, 0, -4), Vector3(-3, 2, -4)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d7mpv"]
_data = {
"RESET": SubResource("Animation_5si70"),
"close": SubResource("Animation_4qfd3"),
"open": SubResource("Animation_r1tl3")
}

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yubmf"]
albedo_texture = ExtResource("1_j8gis")
roughness = 0.5
uv1_scale = Vector3(3, 2, 3)
texture_filter = 0

[sub_resource type="BoxMesh" id="BoxMesh_japa2"]
size = Vector3(0.1, 2, 2)

[sub_resource type="BoxShape3D" id="BoxShape3D_v8f7w"]
size = Vector3(2, 2, 2)

[node name="SimpleDoor" type="Node3D" groups=["Door"]]
script = ExtResource("1_eomb3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../SimpleDoor")
libraries = {
"": SubResource("AnimationLibrary_d7mpv")
}

[node name="SimpleDoor" type="CSGMesh3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, -4)
material_override = SubResource("StandardMaterial3D_yubmf")
use_collision = true
collision_mask = 22
mesh = SubResource("BoxMesh_japa2")

[node name="Area3D" type="Area3D" parent="SimpleDoor"]
collision_layer = 32
collision_mask = 22

[node name="CollisionShape3D" type="CollisionShape3D" parent="SimpleDoor/Area3D"]
shape = SubResource("BoxShape3D_v8f7w")

[node name="DoorSnd" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_3cjke")

[connection signal="area_entered" from="SimpleDoor/Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="area_exited" from="SimpleDoor/Area3D" to="." method="_on_area_3d_area_exited"]
